# take

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/take/: __init__.py  aggregators.py  arguments.py  predicates.py  take.py  utils.py
tests/: test_integration.py  test_parser.py  test_predicates.py
