[project]
name = "take"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "damianoazzolini", email = "damiano.azzolini@unife.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
take = "take:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
