[project]
name = "take"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "damianoazzolini", email = "damiano.azzolini@unife.com" }
]
requires-python = ">=3.11"
dependencies = [
    "hypothesis>=6.136.7",
    "matplotlib>=3.10.3",
    "pytest>=8.4.1",
]

[project.scripts]
take = "take:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
